<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Codex Reader</string>
    <string name="app_pref">Application Preferences</string>
    <string name="ok">OK</string>
    <string name="crash_message">Application has crashed</string>
    <string name="error">Error</string>
    <string name="story_deleted">Could not retrieve story info. Story may have been deleted.</string>
    <string name="next">next</string>
    <string name="email">Send Email</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="enter_id">Enter Story Id</string>
    <string name="read">Read</string>
    <string name="options">Options</string>
    <string name="more">More…</string>
    <string name="next_chapter">Next Chapter</string>
    <string name="prev_chapter">Previous Chapter</string>
    <string name="update">Update</string>

    <string name="updating">Updating …</string>
    <string name="delete">Delete</string>
    <string name="descr">Description</string>
    <string name="read_online">Read Online</string>
    <string name="file_not_found">File already deleted.</string>
    <string name="download_complete">Download Complete.</string>
    <string name="save">Save Story</string>
    <string name="refresh">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="view_browser">View in Browser</string>
    <string name="cannot_save">Cannot save content on this page.</string>
    <string name="downloading">Downloading</string>
    <string name="geting_info">Getting story info.</string>
    <string name="loading">Loading</string>
    <string name="reading_disk">Reading chapter from disk.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="update_complete">Update Complete</string>
    <string name="update_stopped">Update Stopped.</string>
    <string name="update_failed">Update Failed.</string>
    <string name="updates_found">Updates found.</string>
    <string name="delete_save_warning">Story deleted. Cannot save.</string>
    <string name="select_site">Select a site</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="font_size">Font Size</string>
    <string name="choose_font">Choose a font size</string>
    <string name="font_summary">The font size displayed while reading.</string>
    <string name="choose_descr">Choose Description Style</string>
    <string name="orientation">Orientation</string>
    <string name="orientation_summary">Set default orientation for reading.</string>
    <string name="choose_orientation">Choose Orientation</string>
    <string name="choose_setting">Choose Setting</string>
    <string name="back_navigation">Whether or not to use back button for web navigation.</string>
    <string name="back_browser">Back Button in Browser</string>
    <string name="current">current</string>
    <string name="book_is_shorter">Page not found, loading Chapter 1.</string>
    <string name="input_numeric">Input should be numeric.</string>
    <string name="settings">Settings</string>
    <string name="sorting_filtering">Sorting and Filtering</string>
    <string name="description_hidden">Description Hidden.</string>
    <string name="sort_by">Sort by:</string>
    <string name="group_by">Group by:</string>
    <string name="sites_descr">Sites:</string>
    <string name="description_preview">Enable Description Preview</string>
    <string name="description_settings_summary">Choose whether or not the preview is shown.</string>
    <string name="choose_site">Choose Site:</string>
    <string name="cannot_write">Cannot write to disk.</string>
    <string name="directory_create_failed">Could not create directory.</string>
    <string name="write_failed">E-Book write operation failed.</string>
    <string name="saved_ebook">Saved to disk in "Documents" directory.</string>
    <string name="download_stopped">Download stopped.</string>
    <string name="download_failed">Download failed.</string>
    <string name="already_downloaded">Story already downloaded.</string>
    <string name="retrieve_info_failed">Failed to retrieve story info.</string>
    <string name="crossover_description">Group Stories with multiple categories together.</string>
    <string name="search_categories">Search Categories</string>
    <string name="failed_load_page">Page failed to load.</string>
    <string name="loading_failed">Loading Failed.</string>
    <string name="alert">Alert!</string>
    <string name="sort_title">Sort by Title</string>
    <string name="sort_popularity">Sort by Popularity</string>
    <string name="sorting_options">Sorting Options</string>
    <string name="main_activity_package">com.qan.fiction.ui.activity.MainActivity</string>
    <string name="loading_page">Loading …</string>
    <string name="no_stories_found">No stories found.</string>
    <string name="about">About</string>
    <string name="starting_update">Starting update …</string>
    <string name="library">Library</string>
    <string name="no_internet">No Internet Connection.</string>
    <string name="ao3">Archive of Our Own</string>
    <string name="ff_net">FanFiction</string>
    <string name="fp_com">FictionPress</string>
    <string name="group_crossover_text">Group Crossovers</string>
    <string name="light_theme">light_theme</string>
    <string name="use_light_theme">Use Day Theme</string>
    <string name="light_theme_summary">Set the app theme.</string>
    <string name="restart_required_warning">A restart will be required to apply changes. Restart Now?</string>
    <string name="later">Restart Later</string>
    <string name="restart_now">Restart Now</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="complete">Complete</string>
    <string name="in_progress">In-Progress</string>
    <string name="status">Status:</string>
    <string name="reader_settings">Reader Settings</string>
    <string name="screen_on_description">Select to prevent screen from turning off while reading.</string>
    <string name="screen_on_text">Keep Screen On</string>
    <string name="app_settings">App Settings</string>
    <string name="start_tts">Start TTS</string>
    <string name="stop_tts">Stop TTS</string>
    <string name="warning">Warning</string>
    <string name="tts_initialization_failed">TTS Engine initialization failed.</string>
    <string name="chapters">Chapters</string>
    <string name="expand_all">Expand All</string>
    <string name="collapse_all">Collapse All</string>
    <string name="clear_search">Clear Searches</string>
    <string name="review_chapter">Review Chapter</string>
    <string name="read_write_failed">Reading/Writing from the disk failed.</string>

    <!--Broadcast Names-->
    <string name="broadcast_action">com.qan.fiction.NOTIFY</string>
    <string name="forward_action">com.qan.fiction.FORWARD</string>
    <string name="broadcast_theme">com.qan.fiction.THEME_CHANGE</string>
    <!--Preference Names-->
    <string name="filtering">filtering</string>
    <string name="sorting">sorting</string>
    <string name="site_sorting">site_sorting</string>
    <string name="last_site">last_online</string>
    <string name="online_info">online_info</string>
    <string name="sorting_style">sorting_style</string>
    <string name="online_location">online_location</string>
    <string name="group_crossovers">group_crossover</string>
    <string name="back_button">back_button</string>
    <string name="description_style">description_style</string>
    <string name="text_size">text_size</string>
    <string name="filter_status">filter_status</string>
    <string name="keep_screen_on">keep_screen_on</string>
    <string name="unknown_title">Unknown Title</string>

    <!-- Notification Channels -->
    <string name="download_channel">Downloads</string>
</resources>
