<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/chapter"
        android:orderInCategory="20"
        android:title="@string/chapters"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/prev"
        android:icon="@drawable/prev_dark"
        android:title="@string/prev_chapter"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/next"
        android:icon="@drawable/next_dark"
        android:title="@string/next_chapter"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/save_story"
        android:icon="@drawable/save_dark"
        android:orderInCategory="10"
        android:title="@string/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/view_web_icon"
        android:icon="@drawable/web_dark"
        android:orderInCategory="2000"
        android:title="@string/view_browser"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/review_chapter"
        android:orderInCategory="2100"
        android:title="@string/review_chapter"
        android:visible="@bool/DEBUG"
        app:showAsAction="collapseActionView" />

</menu>