<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="horizontal"
             android:padding="20dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <TextView android:id="@+id/sites_tag"
                  android:text="@string/sites_descr"
                  android:textSize="16sp"
                  android:layout_marginBottom="20dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <Spinner android:id="@+id/sites"
                 android:layout_marginLeft="15dp"
                 android:layout_marginBottom="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <TextView android:id="@+id/filter_tag"
                  android:text="@string/group_by"
                  android:layout_marginBottom="20dp"
                  android:textSize="16sp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <Spinner android:id="@+id/filtering"
                 android:layout_marginBottom="20dp"
                 android:layout_marginLeft="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow android:layout_height="wrap_content"
              android:layout_width="match_parent">
        <TextView android:id="@+id/sorting_tag"
                  android:text="@string/sort_by"
                  android:textSize="16sp"
                  android:layout_marginBottom="20dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <Spinner android:id="@+id/sorting"
                 android:layout_marginLeft="15dp"
                 android:layout_marginBottom="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow android:layout_height="wrap_content"
              android:layout_width="match_parent">
        <TextView android:id="@+id/status_tag"
                  android:text="@string/status"
                  android:textSize="16sp"
                  android:layout_marginBottom="20dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <Spinner android:id="@+id/status"
                 android:layout_marginLeft="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
    </TableRow>
</TableLayout>